--- a/moodflow/android/app/src/main/res/xml/backup_rules.xml
+++ b/moodflow/android/app/src/main/res/xml/backup_rules.xml
@@ -1,10 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <full-backup-content>
-    <!-- Include all shared preferences (where Flutter stores data) -->
-    <include domain="sharedpref" path="." />
+    <!-- Include Flutter's main shared preferences file -->
+    <include domain="sharedpref" path="FlutterSharedPreferences.xml" />
 
-    <!-- EXCLUDE sensitive data from backup -->
-    <exclude domain="sharedpref" path="openai_api_key" />
-    <exclude domain="sharedpref" path="google_signin_tokens" />
-    <exclude domain="sharedpref" path="flutter_secure_storage" />
+    <!-- Include notification plugin files -->
+    <include domain="sharedpref" path="notification_plugin_cache.xml" />
+    <include domain="sharedpref" path="scheduled_notifications.xml" />
+
+    <!-- Include other system files -->
+    <include domain="sharedpref" path="android.app.ActivityThread.IDS.xml" />
+
+    <!-- We can't exclude individual keys from FlutterSharedPreferences.xml -->
+    <!-- So we'll handle sensitive data exclusion differently -->
 </full-backup-content>
