--- a/moodflow/android/app/src/main/res/drawable/app_button_bg.xml
+++ b/moodflow/android/app/src/main/res/drawable/app_button_bg.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="https://schemas.android.com/apk/res/android">
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
             <solid android:color="#80FFFFFF" />
@@ -9,7 +9,7 @@
     <item>
         <shape android:shape="rectangle">
             <solid android:color="#40FFFFFF" />
-            <corners android="radius=8dp" />
+            <corners android:radius="8dp" />
         </shape>
     </item>
 </selector>
