--- a/moodflow/android/app/src/main/res/xml/mood_widget_info.xml
+++ b/moodflow/android/app/src/main/res/xml/mood_widget_info.xml
@@ -6,5 +6,5 @@
                     android:minHeight="120dp"
                     android:previewImage="@mipmap/ic_launcher"
                     android:resizeMode="horizontal|vertical"
-                    android:updatePeriodMillis="0"
+                    android:updatePeriodMillis="1800000"
                     android:widgetCategory="home_screen" />
